--- a/HTML/Desafio/desafio10/style/style.css
+++ b/HTML/Desafio/desafio10/style/style.css
@@ -115,6 +115,7 @@
       color: var(--cor5);
       background-color: var(--cor3);
       padding: 2px 6px;
+      border-radius: 10px;
    }
    main a:hover{
       text-decoration: underline;
