--- a/desafios/desafio12/style/style.css
+++ b/desafios/desafio12/style/style.css
@@ -7,8 +7,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow&family=Bebas+Neue&family=Heebo&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Outfit&family=Passion+One:wght@400;700;900&family=Sriracha&family=Young+Serif&display=swap');
 
 :root{
-    --fonte2:'Passion one', cursive;
-    --fonte3:'Sriracha', cursive:
+    --fonte2:'passion one', cursive;
+    --fonte3:'Sriracha', cursive;
 }
 
 *{
@@ -47,7 +47,7 @@ section{
     padding-top: 10vh;
     padding-bottom: 10vh;
     line-height: 2em;
-    font-family: var(--fonte2);
+    font-family: var(--fonte3);
     font-size: 2.2vh;
 }
 section > p{
