--- a/exercicios/ex026/mq002/paisagem/style.css
+++ b/exercicios/ex026/mq002/paisagem/style.css
@@ -3,3 +3,10 @@
 /*
 Aparelho deitado (Landscape)
 */
+
+body{
+    background: url(../imagens/cev-landscape.jpg);
+    background-position: left bottom;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
