--- a/exercicios/ex026/mq002/retrato/style.css
+++ b/exercicios/ex026/mq002/retrato/style.css
@@ -3,3 +3,10 @@
 /*
 Aparelho em pé (portration)
 */
+
+body{
+    background: url(../imagens/cev-portrait.jpg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center bottom;
+}
