--- a/exercicios/ex026/mq002/retrato/style.css
+++ b/exercicios/ex026/mq002/retrato/style.css
@@ -5,7 +5,7 @@ Aparelho em pé (portration)
 */
 
 body{
-    background: url(../imagens/cev-portrait.jpg);
+    background-image: url(../imagens/cev-portrait.jpg);
 
     background-position: center bottom;
 }
