--- a/exercicios/ex026/mq004/style/style.css
+++ b/exercicios/ex026/mq004/style/style.css
@@ -15,12 +15,12 @@ html{
 }
 
 body{
-    background: black url(../back-phone.jpg) no-repeat;
+    background: black url(../imagens/back-phone.jpg) no-repeat;
     background-size: cover;
     background-position: center center;
 }
 main{
-    background-color: rgba(255, 255, 255, 0.393);
+    background-color: rgba(255, 255, 255, 0.09);
     width: 200px;
     margin: auto;
     margin-top: 20px;
@@ -29,14 +29,15 @@ main{
 }
 h1{
     text-align: center;
-    color: white;
+    color: rgb(255, 255, 255);
     text-shadow: 3px 2px 2px rgba(0, 0, 0, 0.49);
 }
 img{
     display: block;
     margin: auto;
 }
-#phone{display: block;}
+#phone{display: block;
+max-width:480px ;}
 #tablet{display: none;}
 #print{display: none;}
 #pc{display: none;}
