--- a/exercicios/ex026/mq004/style/style.css
+++ b/exercicios/ex026/mq004/style/style.css
@@ -36,8 +36,7 @@ img{
     display: block;
     margin: auto;
 }
-#phone{display: block;
-max-width:480px ;}
+#phone{display: block;}
 #tablet{display: none;}
 #print{display: none;}
 #pc{display: none;}
