--- a/exercicios/ex027/style/stylee.css
+++ b/exercicios/ex027/style/stylee.css
@@ -6,55 +6,55 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
     background-color: #8a8a8a;
+    box-sizing: border-box;
 }
 
 header{
     background-color: #494949;
     color: white;
+    
+
+    padding: 10px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: center;
 }
 header > h1{
-    text-align: center;
+    text-shadow: 2px 2px rgba(0, 0, 0, 0.63);
+    flex: 0 0 200px;
+
+
 }
 nav{
     display: flex;
-    flex-flow: column;
+    flex-flow: row wrap;
+    justify-content: flex-end;
 }
 
 nav > a{
     background-color: #061826;
     color: #c1c1c1;
-    margin:5px 5px 0px 5px ;
+    margin:5px;
     padding: 5px;
     text-decoration: none;
     text-align: center;
+
+
+
     
 }
 
 nav > a:hover{
     background-color:#b8b7b7 ;
     color: #061826;
+    transition:background-color .4s;
 }
 
 main{
     background-color: white;
     margin: 10px;
     padding: 10px;
-    border: 1px solid rgba(0, 0, 0, 0.397);
+    box-shadow: 2px 2px rgba(0, 0, 0, 0.466);
     border-radius: 5px;
-}
-
-
-@media  screen and (min-width: 768px) {
-    header > h1{
-        text-align: left;
-        vertical-align: bottom;
-    }
-    nav{
-        display: flex;
-        flex-flow:row;
-    }
-
-}
-@media screen and (min-width: 968px){
-    
 }
